--- a/Billing/WebContent/Billing.html
+++ b/Billing/WebContent/Billing.html
@@ -4,23 +4,24 @@
 <meta charset="ISO-8859-1">
 <title>Billing</title>
 <script type="text/javascript" src="jquery-1.9.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 <script type="text/javascript" src="Script.js"></script>
 <link rel="stylesheet" href="StyleSheet.css">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigin="anonymous">
 
 <style id="compiled-css" type="text/css">
 </style>
 
 </head>
 <body>
-
+		<div class="container d-flex justify-content-center mt-50 mb-50">
+        <div class="row">
+        <div class="col-md-12 text-right mb-3">
+        <button class="btn btn-primary" id="download"> Download PDF</button>
+        </div>
 	<page size="A4">
-	<h1 class="h1">
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-	</h1>
+	<div  id="invoice">
 	<h2 class="h2">
 		<br>
 	</h2>
@@ -77,7 +78,7 @@
 				<tr>
 					<td><input type="Number" style="width: 2.5em" min="0" max="1">
 					</td>
-					<td><textarea name="particulars" rows="4" cols="35"></textarea></td>
+					<td><textarea name="particulars" rows="2" cols="31"></textarea></td>
 					<td valign="middle"><input type="text" size="5" name="HSNCODE"></td>
 					<td valign="middle"><input type="number" class="input prec1"
 						value="" style="width: 3em" name="pre"></td>
@@ -95,7 +96,7 @@
 				<tr>
 					<td><input type="Number" style="width: 2.5em" min="0" max="1">
 					</td>
-					<td><textarea name="particulars" rows="4" cols="35"></textarea></td>
+					<td><textarea name="particulars" rows="2" cols="31"></textarea></td>
 					<td valign="middle"><input type="text" size="5" name="HSNCODE"></td>
 					<td valign="middle"><input type="number" class="input prec2"
 						value="" style="width: 3em" name="pre"></td>
@@ -113,7 +114,7 @@
 				<tr>
 					<td><input type="Number" style="width: 2.5em" min="0" max="1">
 					</td>
-					<td><textarea name="particulars" rows="4" cols="35"></textarea></td>
+					<td><textarea name="particulars" rows="2" cols="31"></textarea></td>
 					<td valign="middle"><input type="text" size="5" name="HSNCODE"></td>
 					<td valign="middle"><input type="number" class="input prec3"
 						value="" style="width: 3em" name="pre"></td>
@@ -131,7 +132,7 @@
 				<tr>
 					<td><input type="Number" style="width: 2.5em" min="0" max="1">
 					</td>
-					<td><textarea name="particulars" rows="4" cols="35"></textarea></td>
+					<td><textarea name="particulars" rows="2" cols="31"></textarea></td>
 					<td valign="middle"><input type="text" size="5" name="HSNCODE"></td>
 					<td valign="middle"><input type="number" class="input1 prec4"
 						value="" style="width: 3em" name="pre"></td>
@@ -149,7 +150,7 @@
 				<tr>
 					<td><input type="Number" style="width: 2.5em" min="0" max="1">
 					</td>
-					<td><textarea name="particulars" rows="4" cols="35"></textarea></td>
+					<td><textarea name="particulars" rows="2" cols="31"></textarea></td>
 					<td valign="middle"><input type="text" size="5" name="HSNCODE"></td>
 					<td valign="middle"><input type="number" class="input1 prec5"
 						value="" style="width: 3em" name="pre"></td>
@@ -167,7 +168,7 @@
 				<tr>
 					<td><input type="Number" style="width: 2.5em" min="0" max="1">
 					</td>
-					<td><textarea name="particulars" rows="4" cols="35"></textarea></td>
+					<td><textarea name="particulars" rows="2" cols="31"></textarea></td>
 					<td valign="middle"><input type="text" size="5" name="HSNCODE"></td>
 					<td valign="middle"><input type="number" class="input1 prec6"
 						value="" style="width: 3em" name="pre"></td>
@@ -300,6 +301,7 @@
 		</table>
 	</div>
 	<div align="center">Your Address.</div>
+	</div>
 	</page>
 </body>
 </html>
