--- a/Billing/WebContent/Billing.html
+++ b/Billing/WebContent/Billing.html
@@ -25,7 +25,10 @@
 	<h2 class="h2">
 		<br>
 	</h2>
-	<h3 class="h3"></h3>
+	<h3 class="h3">
+	<br>
+	<br>
+	</h3>
 
 	<div class="rowmain">
 		<table class="leftone">
