Add Html edit file

--- a/Billing/WebContent/Billing.html
+++ b/Billing/WebContent/Billing.html
@@ -92,7 +92,7 @@
 					<td valign="middle"><input disabled="disabled" id="Gst1"
 						style="width: 6.0em" name="gst"></td>
 					<td valign="middle"><input disabled="disabled"
-						class="text-right" id="result1" name="result1" class="input result1"
+						class="text-right1" id="result1" name="result1" class="input result1"
 						value="" style="width: 6.5em"></td>
 				</tr>
 
@@ -110,7 +110,7 @@
 					<td valign="middle"><input disabled="disabled" id="Gst2"
 						style="width: 6.0em" name="gst2"></td>
 					<td valign="middle"><input disabled="disabled"
-						class="text-right" id="result2" name="result2" class="input result2"
+						class="text-right1" id="result2" name="result2" class="input result2"
 						style="width: 6.5em"></td>
 				</tr>
 
@@ -128,7 +128,7 @@
 					<td valign="middle"><input disabled="disabled" id="Gst3"
 						style="width: 6.0em" name="gst3"></td>
 					<td valign="middle"><input disabled="disabled"
-						class="text-right" id="result3" name="result3" class="input result3"
+						class="text-right1" id="result3" name="result3" class="input result3"
 						style="width: 6.5em"></td>
 				</tr>
 
@@ -146,7 +146,7 @@
 					<td valign="middle"><input disabled="disabled" id="Gst4"
 						style="width: 6.0em" name="gst4"></td>
 					<td valign="middle"><input disabled="disabled"
-						class="text-right" id="result4" name="result4" class="input result4"
+						class="text-right1" id="result4" name="result4" class="input result4"
 						style="width: 6.5em"></td>
 				</tr>
 
@@ -164,7 +164,7 @@
 					<td valign="middle"><input disabled="disabled" id="Gst5"
 						style="width: 6.0em" name="gst5"></td>
 					<td valign="middle"><input disabled="disabled"
-						class="text-right" id="result5" name="result5" class="input result5"
+						class="text-right1" id="result5" name="result5" class="input result5"
 						style="width: 6.5em"></td>
 				</tr>
 
@@ -182,7 +182,7 @@
 					<td valign="middle"><input disabled="disabled" id="Gst6"
 						style="width: 6.0em" name="gst6"></td>
 					<td valign="middle"><input disabled="disabled"
-						class="text-right" id="result6" name="result6" class="input result6"
+						class="text-right1" id="result6" name="result6" class="input result6"
 						style="width: 6.5em"></td>
 				</tr>
 			</tbody>
