--- a/Billing/WebContent/Billing.html
+++ b/Billing/WebContent/Billing.html
@@ -72,7 +72,7 @@
 						<tr>
 							<th>Sr. No.</th>
 							<th>PARTICULARS.</th>
-							<th>HSN <br> CODE
+							<th>HSN <br /> CODE
 							</th>
 							<th>%</th>
 							<th>RATE</th>
@@ -87,7 +87,7 @@
 							<td><input type="Number" style="width: 2.5em" min="0"
 								max="1"></td>
 							<td><textarea name="particulars" rows="2" cols="25"></textarea></td>
-							<td valign="middle"><input type="text" size="5"
+							<td valign="middle"><input type="text" size="4"
 								name="HSNCODE"></td>
 							<td valign="middle"><input type="number" class="input prec1"
 								value="" style="width: 3em" name="pre"></td>
@@ -106,7 +106,7 @@
 							<td><input type="Number" style="width: 2.5em" min="0"
 								max="1"></td>
 							<td><textarea name="particulars" rows="2" cols="25"></textarea></td>
-							<td valign="middle"><input type="text" size="5"
+							<td valign="middle"><input type="text" size="4"
 								name="HSNCODE"></td>
 							<td valign="middle"><input type="number" class="input prec2"
 								value="" style="width: 3em" name="pre"></td>
@@ -125,7 +125,7 @@
 							<td><input type="Number" style="width: 2.5em" min="0"
 								max="1"></td>
 							<td><textarea name="particulars" rows="2" cols="25"></textarea></td>
-							<td valign="middle"><input type="text" size="5"
+							<td valign="middle"><input type="text" size="4"
 								name="HSNCODE"></td>
 							<td valign="middle"><input type="number" class="input prec3"
 								value="" style="width: 3em" name="pre"></td>
@@ -144,7 +144,7 @@
 							<td><input type="Number" style="width: 2.5em" min="0"
 								max="1"></td>
 							<td><textarea name="particulars" rows="2" cols="25"></textarea></td>
-							<td valign="middle"><input type="text" size="5"
+							<td valign="middle"><input type="text" size="4"
 								name="HSNCODE"></td>
 							<td valign="middle"><input type="number"
 								class="input1 prec4" value="" style="width: 3em" name="pre"></td>
@@ -163,7 +163,7 @@
 							<td><input type="Number" style="width: 2.5em" min="0"
 								max="1"></td>
 							<td><textarea name="particulars" rows="2" cols="25"></textarea></td>
-							<td valign="middle"><input type="text" size="5"
+							<td valign="middle"><input type="text" size="4"
 								name="HSNCODE"></td>
 							<td valign="middle"><input type="number"
 								class="input1 prec5" value="" style="width: 3em" name="pre"></td>
@@ -182,7 +182,7 @@
 							<td><input type="Number" style="width: 2.5em" min="0"
 								max="1"></td>
 							<td><textarea name="particulars" rows="2" cols="25"></textarea></td>
-							<td valign="middle"><input type="text" size="5"
+							<td valign="middle"><input type="text" size="4"
 								name="HSNCODE"></td>
 							<td valign="middle"><input type="number"
 								class="input1 prec6" value="" style="width: 3em" name="pre"></td>
