--- a/Billing/WebContent/Billing.html
+++ b/Billing/WebContent/Billing.html
@@ -249,12 +249,12 @@
 			<div class="rowmain">
 				<table>
 					<tr align="center">
-						<th align="left" class="th1">GST No : XXXXXXXXXXXX.<br>
+						<th class="th1 text-left">GST No : XXXXXXXXXXXX.<br>
 							Name Of Bank.<br> Name Of Branch.<br> IFSC Code :
 							XXXXXXXX.<br> A/C No : XXXXXXXXXXX.
 						</th>
 
-						<th align="left" width="380" class="th1">1.Interest at 24%
+						<th width="380" class="th1 text-left">1.Interest at 24%
 							will be charged on bill not paid with in 15 days. <br> 2.We
 							reserve the right to demand payment of this bill at any time. <br>
 							3.All payments are to be made at payee's A/c Cheque only in
