--- a/Billing/WebContent/Billing.html
+++ b/Billing/WebContent/Billing.html
@@ -8,7 +8,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 	<script type="text/javascript" src="Script.js"></script>
 	<link rel="stylesheet" href="bootstrap.min.css">
-	<link rel="stylesheet" href="StyleSheet.css">
+	<link rel="stylesheet" href="stylesheet.css">
 	<!-- 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigin="anonymous"> -->
 	<style id="compiled-css" type="text/css">
