--- a/Billing/WebContent/Billing.html
+++ b/Billing/WebContent/Billing.html
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<title>Billing</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<script type="text/javascript" src="jquery-3.6.3.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 	<script type="text/javascript" src="Script.js"></script>
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<link rel="stylesheet" href="stylesheet.css">
-	<!-- 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigin="anonymous"> -->
 	<style id="compiled-css" type="text/css">
 
 
